# audioviz

./: .gitignore  CMakeLists.txt  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  audioengine.cpp  audioengine.h  build_msys.sh  configmanager.cpp  configmanager.h  copy_dlls.bat  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  planning-diagram.odg  plotwidget.cpp  plotwidget.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tasklist.txt  test.cpp
